--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
                 <input type="text" placeholder="username">
                 <i class='bx bxs-user'></i>
             </div>
+
+            <div class="input-box">
+                <input type="password" placeholder="Password">
+                <i class='bx bx-lock'></i>
+            </div>
+
+            <div class="remember-forget">
+                <label for="">
+                    <input type="checkbox" name="" id="">
+                    Remember Me
+                </label>
+                <a href="">Forgot Password?</a>
+            </div>
+
+            <button type="submit" class="btn">Login</button>
+
+            <div class="register-link">
+                <p>Don't have an account?</p>
+                <a href="">Register</a>
+            </div>
         </form>
     </div>
 </body>
