adding the background

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <video src="background-video.mp4" autoplay loop muted></video>
     <div class="wrapper">
         <form action="submit">
             <h1>Login</h1>
