added images and style to the html and fixed some codes

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <h2>Top Anime this Week</h2>
         <div class="cards">
             <div class="card">
-                <div class="content-img"><img src="">  </div>
+                <div class="content-img"><img src="images/one-piece.jpg">  </div>
                 <p>One Piece</p>
             </div>
             <div class="card">
-                <div class="content-img"> <img src=""> </div>
+                <div class="content-img"> <img src="images/jjk.jpg"> </div>
                 <p>Jujutsu Kaisen</p>
             </div>
             <div class="card">
-                <div class="content-img"><img src=""></div>
+                <div class="content-img"><img src="images/blue.jpg"></div>
                 <p>Blue Lock</p>
             </div>
             <div class="card">
-                <div class="content-img"><img src=""></div>
+                <div class="content-img"><img src="images/naruto.jpg"></div>
                 <p>Naruto</p>
             </div>
         </div>
