--- a/login/sign.html
+++ b/login/sign.html
@@ -33,7 +33,7 @@
 
             <div class="register-link">
                 <p> have an account?</p>
-                <a href="login/login.html">Log-in</a> 
+                <a href="login.html">Log-in</a> 
             </div>
         </form>
     </div>
