--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="intro-text">
             <h1>BE Our Nakama</h1>
             <p class="sidekick-text">Join our journey on sharing anime worldwide by signing up</p>
-            <button class="sign-up"><a href="sign-up/sign.html">Sign up</a></button>
+            <button class="sign-up"><a href="login/sign.html">Sign up</a></button>
         </div>
         <div class="image">
             <p></p>
@@ -60,7 +60,7 @@
             <p><b>Call to action! It's time!</b></p>
             <p class="small">Sign up to stay updated with the latest news, by clicking that button right over there!</p>
         </div>
-        <button class="sign-up"><a href="sign-up/sign.html">Sign up</a></button>
+        <button class="sign-up"><a href="login/sign.html">Sign up</a></button>
     </div>
 </div>
 
