--- a/login/login.html
+++ b/login/login.html
@@ -35,7 +35,7 @@
 
             <div class="register-link">
                 <p>Don't have an account?</p>
-                <a href="">Register</a>
+                <a href="sign.html">Register</a>
             </div>
         </form>
     </div>
